imported RO configs from the dev branch

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -1,3 +1,4 @@
+// Source: https://ia802604.us.archive.org/25/items/nasa_techdoc_19810067693/19810067693.pdf
 @PART[Space_Shuttle_Crew?Module]
 {
 	@name = Space_Shuttle_Crew
@@ -7,7 +8,7 @@
 	@name = Space_Shuttle_Crew_Analog
 }
 
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]:FOR[RealismOverhaul]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin]:FOR[RealismOverhaul]
 {
 	@MODULE[ModuleRCS*],* 
 	{
@@ -26,18 +27,20 @@
 // Vernier RCS thrust : 0.11 kN (24 lbf)
 
 
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]:FOR[RealismOverhaul]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	
+	%CoMOffset = 0,0.6,0
 	@mass = 11.556
 	
-	@maxTemp = 2200
-	%skinMaxTemp = 2700
-	%CoMOffset = 0, 0.0, 0.8
-	%CoLOffset = 0.0, 0.0, 1.0
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	@MODULE[ModuleCommand]
 	{
@@ -47,13 +50,6 @@
 			rate = 7 //just a guess
 		}
 	}
-	
-	!MODULE[ModuleReactionWheel]{}
-	
-	!MODULE[ModuleLiftingSurface]{}
-	//@MODULE[ModuleLiftingSurface]{
-	//	@deflectionLiftCoeff = 1.5
-	//}
 	
 	@MODULE[KSPWheelBase]
 	{
@@ -65,6 +61,7 @@
 		@maxBrakeTorque = 40
 	}
 	
+	!MODULE[ModuleLiftingSurface]{}
 	
 	@MODULE[ModuleRCS*],*
 	{
@@ -85,14 +82,13 @@
 			ratio = 12.9
 			ignoreForIsp = True
 		}
-		
 		@atmosphereCurve
 		{
-			@key, 0 = 0 320
-			@key, 1 = 1 110
+			@key,0 = 0 320
+			@key,1 = 1 110
 		}
 	}
-	
+
 	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCSthruster2]]
 	{
 		%engineID = vernier
@@ -112,7 +108,7 @@
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 939.88
+		volume = 1000
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -169,17 +165,25 @@
 	
 	%rescaleFactor = 1.5625
 	
-	@maxTemp = 2200
-	%skinMaxTemp = 2400
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
-	%CoMOffset = 0,-0.5,1.5	//0,0,1.5
-
-	@MODULE[ModuleLiftingSurface]{
-		%deflectionLiftCoeff = 20.0	
-		%dragAtMaxAoA = 0.1
+	%CoMOffset = 0,3.3,0
+	%CoLOffset = 0,-6.25,0
+	
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = True
+		dragAtMinAoA = 0.0
+		deflectionLiftCoeff = 20.0
+		dragAtMaxAoA = 0.1
 	}
-	%CoLOffset = 0.0, 0.0, 1.0
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
 	// 3 LqdHydrogen tanks with 42 kg (593.2 L) each, and 3 LqdOxygen tanks with 354 kg (310.2 L) each.
@@ -203,13 +207,6 @@
 			maxAmount = 930.7
 		}
 	}
-	
-	!MODULE[ModuleReactionWheel]{}
-	
-	!MODULE[ModuleLiftingSurface]{}
-	//@MODULE[ModuleLiftingSurface]{
-	//	@deflectionLiftCoeff = 1.0
-	//}
 	
 	!MODULE[ModuleLight],* {}
 	
@@ -246,9 +243,13 @@
 	%RSSROConfig = true
 	
 	@mass = 10.7
-	%CoMOffset = 0, 0.0, 0.8
-	%skinMaxTemp = 2700
-	%maxTemp = 2200
+	
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	%rescaleFactor = 1.5625
 	
@@ -283,8 +284,6 @@
 	// three fuel cells
 	// 7kW sustained load, and 0.6 l water per kWh
 	!MODULE[ModuleResourceConverter]{}
-	
-	!MODULE[ModuleLiftingSurface]{}
 	
 	MODULE
 	{
