--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
@@ -15,8 +15,12 @@
 	
 	%rescaleFactor = 1.5625
 	
-	%maxTemp = 1700
-	%skinMaxTemp = 1900
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 2.79
 	%fuelCrossFeed = false
@@ -26,7 +30,7 @@
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 6027.66
+		volume = 6416.5
 		type = ServiceModule
 		basemass = -1
 		TANK
@@ -68,19 +72,18 @@
 			ratio = 12.9
 			ignoreForIsp = True
 		}
-		
 		@atmosphereCurve
 		{
-			@key, 0 = 0 320
-			@key, 1 = 1 110
+			@key,0 = 0 320
+			@key,1 = 1 110
 		}
 	}
-	
+
 	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCS5]]
 	{
 		%engineID = vernier
 		@thrusterPower = 0.11
-		
+
 		@enableRoll = false
 		@enableYaw = true
 		@enablePitch = false
