--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/RSRM.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/RSRM.cfg
@@ -2,13 +2,13 @@
 // Mass(Loaded): 569.41 Tonnes (1255334 lb)
 // 501.7 Tonnes of PBAN propellant
 // Source : https://www.northropgrumman.com/Capabilities/PropulsionSystems/Documents/NGIS_MotorCatalog.pdf
+
 @PART[SSRBSH|ShuttleRocketBooster]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
 	
-	@mass = 67.6
 	@maxTemp = 773.15
     %skinMaxTemp = 873.15
 	
@@ -20,24 +20,20 @@
 	}
 	
 	!RESOURCE[SolidFuel]{}
-	
-	MODULE
-	{
-		name = ModuleFuelTanks
-		volume = 283126
-		type = PBAN
-		basemass = -1
-		TANK
-		{
-			name = PBAN
-			amount = 283126
-			maxAmount = 283126
-		}
-	}
-	
-	!MODULE[ModuleAlternator] {}
 }
+
+@PART[SSRBSH|ShuttleRocketBooster]:AFTER[RealismOverhaulEngines]
+{
+	@MODULE[ModuleEngineConfigs]
+	{
+		// Remove mass of sep motors and Nosecone
+		@origMass -= 2.379
+	}
+}
+
+
 // Source : https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19950018020.pdf
+
 @PART[SSRB_TOP_CAPSH|ShuttleSSRBTop]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
@@ -68,7 +64,9 @@
         type = HTPB
         volume = 78.6
         basemass = -1
+
         //  HTPB/AP propellant mixture mass 139.16 Kg.
+
         TANK
         {
             name = HTPB
@@ -80,9 +78,9 @@
 @PART[SSRB_decouplerSH|ShuttleSSRBDecoupler]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
-
+	
 	%rescaleFactor = 1.5625
-
+	
 	@MODULE[ModuleDecouple*]
 	{
 		@ejectionForce = 10000
@@ -122,7 +120,9 @@
         type = HTPB
         volume = 79.24
         basemass = -1
+
         //  HTPB/AP propellant mixture mass 140.25 Kg.
+
         TANK
         {
             name = HTPB
@@ -157,6 +157,7 @@
 		position = 0.178, -0.5, -1.64
 		rotation = 33.3, -14.4,0
 	}
+
 	@MODULE[ModuleEngines*]
 	{
 		@thrustVectorTransformName = newThrustTransform
