--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -1,17 +1,22 @@
-@PART[WL_SHUTTLE|WR_SHUTTLE|ShuttleWingL|ShuttleWingR|ShuttleWingLEarly|ShuttleWingREarly]:FOR[RealismOverhaul]
+@PART[WL_SHUTTLE|WR_SHUTTLE|ShuttleWingL|ShuttleWingR]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
 	
+	%CoMOffset = 0, -4.0, 0		//Align CoM with base of landing gear hinge and kink in wing leading edge
 	@mass = 5.3
 	
-	@maxTemp = 2200
-	%skinMaxTemp = 2700
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	%rescaleFactor = 1.5625
 	
 	@maximum_drag = 0
-    @minimum_drag = 0
-    @angularDrag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
 	
 	@MODULE[KSPWheelBrakes]
 	{
@@ -26,15 +31,15 @@
 		%MidChordSweep = 33.6
 		%b_2 = 8.95	
 		%TaperRatio = 0.185
-		%rootMidChordOffsetFromOrig = 0, 0.5, 0
+		%rootMidChordOffsetFromOrig = 0, -0.5, 0
 		%massOverride = 0
 	}
 }
-@PART[WR_SHUTTLE|ShuttleWingR|ShuttleWingREarly]:FOR[RealismOverhaul]
+@PART[WR_SHUTTLE|ShuttleWingR]:FOR[RealismOverhaul]
 {
 	@MODULE[FARWingAerodynamicModel]
 	{
-		%rootMidChordOffsetFromOrig = 6.91, 0, 0
+		@rootMidChordOffsetFromOrig[0] = 6.91
 	}
 }
 @PART[EVELON_L_SHUTTLE|EVELON_R_SHUTTLE|ShuttleElevonL|ShuttleElevonR]:FOR[RealismOverhaul]
@@ -43,27 +48,32 @@
 	
 	@mass = 0.3
 	
-	%maxTemp = 2200
-	%skinMaxTemp = 2700
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	%rescaleFactor = 1.5625
 	
 	@maximum_drag = 0
-    @minimum_drag = 0
-    @angularDrag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
 	
 	!MODULE[ModuleControlSurface]{}
 	%MODULE[FARControllableSurface] {
-        %b_2 = 8.3
-        %MAC = 2.3
-        %TaperRatio = 0.52
-        %MidChordSweep = 5.37
-        %nonSideAttach = 1
-        %maxdeflect = 20
-        %ctrlSurfFrac = 1
-        %transformName = 1
-        %rootMidChordOffsetFromOrig = 0, 0, 0
-    }
+		%b_2 = 8.3
+		%MAC = 2.3
+		%TaperRatio = 0.52
+		%MidChordSweep = 5.37
+		%nonSideAttach = 1
+		%maxdeflect = 20
+		%ctrlSurfFrac = 1
+		%transformName = 1
+		%rootMidChordOffsetFromOrig = 0, 0, 0
+		%massOverride = 0
+	}
 }
 
 @PART[Shuttle_Tail|Shuttle_Tail_no_chute|ShuttleTail]:FOR[RealismOverhaul]
@@ -80,13 +90,18 @@
 	
 	@mass += 0.1
 	
-	%skinMaxTemp = 2200
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	%rescaleFactor = 1.5625
 	
 	@maximum_drag = 0
-    @minimum_drag = 0
-    @angularDrag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
 	
 	!MODULE[ModuleLiftingSurface]{}
 	%MODULE[FARWingAerodynamicModel]
@@ -96,6 +111,7 @@
 		%b_2 = 7.7
 		%TaperRatio = 0.42
 		%rootMidChordOffsetFromOrig = 0, 0, 0
+		%massOverride = 0
 	}
 }
 
@@ -139,24 +155,29 @@
 	
 	%rescaleFactor = 1.5625
 	
-	%maxTemp = 2200
-	%skinMaxTemp = 2700
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	@maximum_drag = 0
-    @minimum_drag = 0
-    @angularDrag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
 	
 	!MODULE[ModuleControlSurface]{}
 	%MODULE[FARControllableSurface] {
-        %b_2 = 5.9
-        %MAC = 1.45
-        %TaperRatio = 0.57
-        %MidChordSweep = -4.6
-        %nonSideAttach = 1
-        %maxdeflect = 20
-        %ctrlSurfFrac = 1
-        %transformName = 1
-    }
+		%b_2 = 5.9
+		%MAC = 1.45
+		%TaperRatio = 0.57
+		%MidChordSweep = -4.6
+		%nonSideAttach = 1
+		%maxdeflect = 20
+		%ctrlSurfFrac = 1
+		%transformName = 1
+		%massOverride = 0
+	}
 }
 
 @PART[SHUTTLE_Tail_Control|ShuttleTailControl]:AFTER[FerramAerospaceResearch]
@@ -173,22 +194,27 @@
 	
 	%rescaleFactor = 1.5625
 	
-	%maxTemp = 2200
-	%skinMaxTemp = 2700
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
 	
 	@maximum_drag = 0
-    @minimum_drag = 0
-    @angularDrag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
 	
 	!MODULE[ModuleControlSurface]{}
 	%MODULE[FARControllableSurface] {
-        %b_2 = 6
-        %MAC = 2.25
-        %TaperRatio = 1
-        %MidChordSweep = 0
-        %nonSideAttach = 1
-        %maxdeflect = 20
-        %ctrlSurfFrac = 1
-        %transformName = 1
-    }
+		%b_2 = 6
+		%MAC = 2.25
+		%TaperRatio = 1
+		%MidChordSweep = 0
+		%nonSideAttach = 1
+		%maxdeflect = 20
+		%ctrlSurfFrac = 1
+		%transformName = 1
+		%massOverride = 0
+	}
 }
