was missing part definitions

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -1,4 +1,4 @@
-@PART[WL_SHUTTLE|WR_SHUTTLE|ShuttleWingL|ShuttleWingR]:FOR[RealismOverhaul]
+@PART[WL_SHUTTLE|WR_SHUTTLE|ShuttleWingL|ShuttleWingR|ShuttleWingLEarly|ShuttleWingREarly]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
 	
@@ -35,7 +35,7 @@
 		%massOverride = 0
 	}
 }
-@PART[WR_SHUTTLE|ShuttleWingR]:FOR[RealismOverhaul]
+@PART[WR_SHUTTLE|ShuttleWingR|ShuttleWingREarly]:FOR[RealismOverhaul]
 {
 	@MODULE[FARWingAerodynamicModel]
 	{
