external tank types fixed, added srb types

--- a/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
@@ -2,6 +2,7 @@
 
 @PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -110,7 +111,8 @@
 
 @PART[ShuttleElevonR|ShuttleElevonL]
 {
-		MODULE
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
 	{
 		name = ModuleB9PartSwitch
 		moduleID = nameSwitch
@@ -140,6 +142,7 @@
 
 @PART[ShuttleEngMount]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -172,6 +175,7 @@
 
 @PART[ShuttleCargo]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -234,6 +238,7 @@
 
 @PART[ShuttleTail]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -290,6 +295,7 @@
 
 @PART[ShuttleTailControl]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -320,6 +326,7 @@
 
 @PART[ShuttleExtTank]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -327,17 +334,35 @@
 		
 		SUBTYPE
 		{
-			name = LWT
-			title = LWT
+			name = SWT
+			title = SWT
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET1
+				texture = SPACE_SHUTTLE_SYSTEM/ET_SWT
 				transform = ET_001
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX
+				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX_SWT
+				transform = Cylinder_000
+			}
+		}
+		SUBTYPE
+		{
+			name = LWT
+			title = LWT
+			
+			addedMass = -4.87
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ET_LWT
+				transform = ET_001
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX_SLWT
 				transform = Cylinder_000
 			}
 		}
@@ -346,40 +371,26 @@
 			name = SLWT
 			title = SLWT
 			
+			addedMass = -8.25
+			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET1_Orange
+				texture = SPACE_SHUTTLE_SYSTEM/ET_SLWT
 				transform = ET_001
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX
+				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX_SLWT
 				transform = Cylinder_000
 			}
 		}
-		SUBTYPE
-		{
-			name = SWT
-			title = SWT
-			
-			addedMass = 8.5
-			
-			TEXTURE
-			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET1_WHITE
-				transform = ET_001
-			}
-			TEXTURE
-			{
-				texture = SPACE_SHUTTLE_SYSTEM/ET_DETAILTEX_WHITE
-				transform = Cylinder_000
-			}
-		}
+		
 	}
 }
 
 @PART[ShuttleWingL]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -502,6 +513,7 @@
 
 @PART[ShuttleWingR]
 {
+	!MODULE[ModuleB9PartSwitch]
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -676,4 +688,90 @@
 			}
 		}
 	}
+}
+
+
+@PART[ShuttleRocketBooster]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = Old
+			title = Old
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB_CAP
+				transform = Cylinder_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB1
+				transform = Cylinder_002
+				transform = Cylinder_007
+				transform = Cylinder_010
+				transform = Cylinder_011
+			}
+		}
+		SUBTYPE
+		{
+			name = New
+			title = New
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB_CAP_2
+				transform = Cylinder_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB2
+				transform = Cylinder_002
+				transform = Cylinder_007
+				transform = Cylinder_010
+				transform = Cylinder_011
+			}
+		}
+	}
+
+}
+
+
+@PART[ShuttleSSRBTop]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = Old
+			title = Old
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB_CAP
+				transform = Cylinder_013
+			}
+		}
+		SUBTYPE
+		{
+			name = New
+			title = New
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB_CAP_2
+				transform = Cylinder_013
+			}
+		}
+	}
+
 }
