new elevon textures

--- a/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
@@ -137,6 +137,16 @@
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ELEVON1980
 			}
 		}
+		SUBTYPE
+		{
+			name = 1984
+			title = Clean
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ELEVON1984
+			}
+		}
 	}
 }
 
