--- a/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
@@ -419,6 +419,13 @@
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
 		}
 		SUBTYPE
 		{
@@ -432,6 +439,13 @@
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
 			}
 		}
 		SUBTYPE
@@ -447,6 +461,13 @@
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
 		}
 		SUBTYPE
 		{
@@ -460,6 +481,14 @@
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+				
 			}
 		}
 		SUBTYPE
@@ -475,6 +504,13 @@
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
 		}
 		SUBTYPE
 		{
@@ -488,6 +524,13 @@
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
 			}
 		}
 		SUBTYPE
@@ -503,6 +546,13 @@
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
+			}
 		}
 		SUBTYPE
 		{
@@ -516,6 +566,13 @@
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
 				transform = LEFT_OUTBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ2
+				transform = Wing_RCZ_001
 			}
 		}
 	}
@@ -542,6 +599,13 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
 		}
 		SUBTYPE
 		{
@@ -555,6 +619,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 		SUBTYPE
@@ -570,6 +641,13 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
 		}
 		SUBTYPE
 		{
@@ -583,6 +661,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 		SUBTYPE
@@ -598,6 +683,13 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
 		}
 		SUBTYPE
 		{
@@ -611,6 +703,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 		SUBTYPE
@@ -626,6 +725,13 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
 		}
 		SUBTYPE
 		{
@@ -639,6 +745,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 		SUBTYPE
@@ -654,6 +767,14 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+				
+			}
 		}
 		SUBTYPE
 		{
@@ -667,6 +788,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 		SUBTYPE
@@ -682,6 +810,13 @@
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
 			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
+			}
 		}
 		SUBTYPE
 		{
@@ -695,6 +830,13 @@
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
 				transform = RIGHT_INBOARD_ELEVON_
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				isNormalMap = true
+				transform = Wing_RCZ
+				transform = Wing_RCZ2_003
 			}
 		}
 	}
