--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -32,7 +32,8 @@
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	%CoMOffset = 0,0.6,0
+	%CoMOffset = 0, 0.0, 0.8
+	%CoLOffset = 0.0, 0.0, 1.0
 	@mass = 11.556
 	
 	@maxTemp = 773
@@ -173,8 +174,8 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
-	%CoMOffset = 0,3.3,0
-	%CoLOffset = 0,-6.25,0
+	%CoMOffset = 0,-0.5, 1.5
+	%CoLOffset = 0.0, 0.0, 1.0
 	
 	MODULE
 	{
@@ -243,6 +244,7 @@
 	%RSSROConfig = true
 	
 	@mass = 10.7
+	%CoMOffset = 0, 0.0, 0.8
 	
 	@maxTemp = 773
 	%skinMaxTemp = 2000
