more cg adjustments

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -32,7 +32,7 @@
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	%CoMOffset = 0, 0.0, 0.8
+	%CoMOffset = 0, 0.6, 0.8
 	%CoLOffset = 0.0, 0.0, 1.0
 	@mass = 11.556
 	
@@ -174,8 +174,8 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
-	%CoMOffset = 0,-0.5, 1.5
-	%CoLOffset = 0.0, 0.0, 1.0
+	%CoMOffset = 0,0.5, 1.5
+	%CoLOffset = 0.0, -2.0, 1.0
 	
 	MODULE
 	{
