cargo bay cg fix

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -174,16 +174,16 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
-	%CoMOffset = 0,3.3, 1.5
-	%CoLOffset = 0.0, -3.0, 1.0
+	%CoMOffset = 0,2.3, 0.0
+	//%CoLOffset = 0.0, -2.0, 1.0
 	
 	MODULE
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		dragAtMinAoA = 0.0
-		deflectionLiftCoeff = 20.0
-		dragAtMaxAoA = 0.1
+		dragAtMinAoA = 0.1
+		deflectionLiftCoeff = 25.0
+		dragAtMaxAoA = 0.3
 	}
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
