--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -182,7 +182,7 @@
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
 		dragAtMinAoA = 0.1
-		deflectionLiftCoeff = 25.0
+		deflectionLiftCoeff = 35.784	//126 m^2 (estimate of cabin + cargo bay surface area) times 0.284
 		dragAtMaxAoA = 0.3
 	}
 	
