inverted drag points for cargo bay
attempt at increasing hypersonic lift and adding drag in the subsonic regime

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -181,9 +181,9 @@
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		dragAtMinAoA = 0.1
-		deflectionLiftCoeff = 35.784	//126 m^2 (estimate of cabin + cargo bay surface area) times 0.284
-		dragAtMaxAoA = 0.3
+		dragAtMinAoA = 0.3
+		deflectionLiftCoeff = 35.784	//126 m^2 (estimate of cabin + cargo bay + engine mount surface area) times 0.284
+		dragAtMaxAoA = 0.0
 	}
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
