restored cg settings from RO dev branch

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -32,8 +32,7 @@
 	%RSSROConfig = true
 	
 	%rescaleFactor = 1.5625
-	%CoMOffset = 0, 1.0, 0.8
-	%CoLOffset = 0.0, 0.0, 1.0
+	%CoMOffset = 0,0.6,0
 	@mass = 11.556
 	
 	@maxTemp = 773
@@ -174,8 +173,8 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
-	%CoMOffset = 0,2.3, 0.0
-	//%CoLOffset = 0.0, -2.0, 1.0
+	%CoMOffset = 0,3.3,0
+	%CoLOffset = 0,-6.25,0
 	
 	MODULE
 	{
@@ -244,7 +243,6 @@
 	%RSSROConfig = true
 	
 	@mass = 10.7
-	%CoMOffset = 0, 0.0, 0.8
 	
 	@maxTemp = 773
 	%skinMaxTemp = 2000
