reverted cargo bay lifting module

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -180,9 +180,9 @@
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		dragAtMinAoA = 0.3
-		deflectionLiftCoeff = 35.784	//126 m^2 (estimate of cabin + cargo bay + engine mount surface area) times 0.284
-		dragAtMaxAoA = 0.0
+		dragAtMinAoA = 0.0
+		deflectionLiftCoeff = 20.0
+		dragAtMaxAoA = 0.1
 	}
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
