removed cg cl shifts for cargo bay, added ferram aero surface, intentionally overkill

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -178,9 +178,20 @@
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		dragAtMinAoA = 0.0
-		deflectionLiftCoeff = 20.0
-		dragAtMaxAoA = 0.1
+		dragAtMinAoA = 0.2
+		deflectionLiftCoeff = 1.0
+		dragAtMaxAoA = 0.0
+	}
+	
+	//definitely overkill
+	%MODULE[FARWingAerodynamicModel]
+	{
+		%MAC = 25.0	//8.62
+		%MidChordSweep = 33
+		%b_2 = 45.0	
+		%TaperRatio = 0.185
+		%rootMidChordOffsetFromOrig = 3.0, 0, 0
+		%massOverride = 0
 	}
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
