added filament wound srb type

--- a/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
@@ -889,6 +889,27 @@
 				transform = Cylinder_011
 			}
 		}
+		SUBTYPE
+		{
+			name = Filament-Wound Casing
+			title = Filament-Wound Casing
+			
+			addedMass = -13.6
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB_CAP_2
+				transform = Cylinder_003
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/SSRB1
+				transform = Cylinder_002
+				transform = Cylinder_007
+				transform = Cylinder_010
+				transform = Cylinder_011
+			}
+		}
 	}
 
 }
