--- a/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/ShuttleTextureSwitch.cfg
@@ -15,7 +15,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -27,7 +27,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_DISCOVERY
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_DISCOVERY
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -39,7 +39,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_ENDEAVOUR
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENDEAVOUR
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -51,7 +51,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_CHALLENGER
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_CHALLENGER
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -63,7 +63,14 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_COLUMBIA
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -75,7 +82,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_COLUMBIA_SECOND_VERSION
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_COLUMBIA_SECOND_VERSION
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -89,7 +96,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/CABINE_ENTERPRISE
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_ENTERPRISE
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -101,7 +108,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Empty/EmptyCabin
+				texture = SPACE_SHUTTLE_SYSTEM/Cabin/CABINE_EMPTY
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -109,7 +116,7 @@
 	}
 }
 
-@PART[ShuttleElevonR|ShuttleElevonL]
+@PART[ShuttleElevonL]
 {
 	!MODULE[ModuleB9PartSwitch]
 	MODULE
@@ -124,7 +131,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/WINGS_AND_BOTTOM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 			}
 		}
 		SUBTYPE
@@ -134,7 +141,14 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ELEVON1980
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = LEFT_INBOARD_ELEVON
+				transform = LEFT_OUTBOARD_ELEVON
 			}
 		}
 		SUBTYPE
@@ -144,7 +158,70 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ELEVON1984
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = LEFT_INBOARD_ELEVON
+				transform = LEFT_OUTBOARD_ELEVON
+			}
+		}
+	}
+}
+
+
+@PART[ShuttleElevonR]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = Modern
+			title = Charred
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
+			}
+		}
+		SUBTYPE
+		{
+			name = 1980
+			title = Clean - Columbia Tiles
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = RIGHT_INBOARD_ELEVON
+				transform = RIGHT_OUTBOARD_EL
+			}
+		}
+		SUBTYPE
+		{
+			name = 1984
+			title = Clean
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
+				isNormalMap = true
+				transform = RIGHT_INBOARD_ELEVON
+				transform = RIGHT_OUTBOARD_EL
 			}
 		}
 	}
@@ -160,8 +237,19 @@
 		
 		SUBTYPE
 		{
-			name = atlantis
-			title = Atlantis
+			name = old
+			title = Old
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = ULTRA_ENGINE
+			}
+		}
+		SUBTYPE
+		{
+			name = new
+			title = New
 			
 			TEXTURE
 			{
@@ -169,15 +257,70 @@
 				transform = ULTRA_ENGINE
 			}
 		}
+	}
+}
+
+@PART[ShuttleOMSPodL]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
 		SUBTYPE
 		{
-			name = columbia
-			title = Columbia
+			name = old
+			title = Old
 			
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
-				transform = ULTRA_ENGINE
+				transform = _111R
+			}
+		}
+		SUBTYPE
+		{
+			name = new
+			title = New
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = _111R
+			}
+		}
+	}
+}
+
+@PART[ShuttleOMSPodR]
+{
+	!MODULE[ModuleB9PartSwitch]
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = nameSwitch
+		
+		SUBTYPE
+		{
+			name = old
+			title = Old
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT_OLD_VERSION
+				transform = _111R_001
+			}
+		}
+		SUBTYPE
+		{
+			name = new
+			title = New
+			
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/ENGINE_MOUT
+				transform = _111R_001
 			}
 		}
 	}
@@ -261,7 +404,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 			}
 			TEXTURE
 			{
@@ -276,7 +419,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
 			}
 			TEXTURE
 			{
@@ -292,7 +435,7 @@
 
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
 			}
 			TEXTURE
 			{
@@ -318,7 +461,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 			}
 		}
 		SUBTYPE
@@ -328,7 +471,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
 			}
 		}
 	}
@@ -421,7 +564,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -442,7 +585,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -463,7 +606,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -484,7 +627,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -506,7 +649,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -519,7 +662,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_ENTERPRISE
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
@@ -527,7 +670,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -540,7 +683,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Empty/EmptyWingsNew
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
@@ -548,7 +691,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -561,7 +704,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Empty/EmptyWingsOld
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
 				transform = LEFT_INBOARD_ELEVON_S
@@ -569,7 +712,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ2
 				transform = Wing_RCZ_001
@@ -601,7 +744,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -622,7 +765,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -643,7 +786,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -664,7 +807,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -685,7 +828,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -706,7 +849,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -727,7 +870,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -748,7 +891,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_COLUMBIA_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -769,7 +912,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -783,7 +926,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_ENTERPRISE
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/WINGSENTERPRISE
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
@@ -791,7 +934,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_CHALLENGER_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -804,7 +947,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Empty/EmptyWingsNew
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
@@ -812,7 +955,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_AND_BOTTOM_NR_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
@@ -825,7 +968,7 @@
 			
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/Empty/EmptyWingsOld
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
 				transform = RIGHT_OUTBOARD_ELEVON
@@ -833,7 +976,7 @@
 			}
 			TEXTURE
 			{
-				texture = SPACE_SHUTTLE_SYSTEM/WINGS_DISCOVERY_OLD_NRM
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsOld_NRM
 				isNormalMap = true
 				transform = Wing_RCZ
 				transform = Wing_RCZ2_003
