oms fuel crossfeed

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
@@ -98,6 +98,11 @@
 		%engineID = primary
 		@thrusterPower = 3.87
 	}
+	
+	@MODULE[ModuleToggleCrossfeed]
+	{
+		%crossfeedStatus = true
+	}
 }
 
 @PART[RCS_L|RCS_R|ShuttleOMSPodL|ShuttleOMSPodR]
