--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -102,6 +102,11 @@
 	
 	!RESOURCE[MonoPropellant]{}
 	
+	@MODULE[ModuleToggleCrossfeed]
+	{
+		%crossfeedStatus = true
+	}
+	
 	
 	// https://www.bernd-leitenberger.de/space-shuttle.shtml
 	// three nickel-cadmium batteries with 10 amperehours each at 28 volts, so in total 3024 kJ
@@ -180,20 +185,9 @@
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = True
-		dragAtMinAoA = 0.2
-		deflectionLiftCoeff = 1.0
-		dragAtMaxAoA = 0.0
-	}
-	
-	//definitely overkill
-	%MODULE[FARWingAerodynamicModel]
-	{
-		%MAC = 25.0	//8.62
-		%MidChordSweep = 33
-		%b_2 = 45.0	
-		%TaperRatio = 0.185
-		%rootMidChordOffsetFromOrig = 3.0, 0, 0
-		%massOverride = 0
+		dragAtMinAoA = 0.0
+		deflectionLiftCoeff = 20.0
+		dragAtMaxAoA = 0.1
 	}
 	
 	//https://www.bernd-leitenberger.de/space-shuttle.shtml
@@ -217,6 +211,11 @@
 			amount = 930.7
 			maxAmount = 930.7
 		}
+	}
+	
+	@MODULE[ModuleToggleCrossfeed]
+	{
+		%crossfeedStatus = true
 	}
 	
 	!MODULE[ModuleLight],* {}
@@ -426,6 +425,11 @@
 			amount = 564.9
 			maxAmount = 564.9
 		}
+	}
+	
+	@MODULE[ModuleToggleCrossfeed]
+	{
+		%crossfeedStatus = true
 	}
 	
 	MODULE
