--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -192,6 +192,36 @@
 	}
 }
 
+@PART[ShuttleRudderPanel]:FOR[RealismOverhaul]
+{
+	%RSSROConfig = true
+	
+	%rescaleFactor = 1.5625
+	
+	@maxTemp = 773
+	%skinMaxTemp = 2000
+	%heatConductivity = 0.01		//all conductivity
+	%skinInternalConductionMult = 0.005	//skin-to-int conductivity
+	%skinSkinConductionMult = 0.1
+	%emissiveConstant = 0.95		//matte black
+	
+	@maximum_drag = 0
+	@minimum_drag = 0
+	@angularDrag = 0
+	
+	!MODULE[ModuleControlSurface]{}
+	%MODULE[FARControllableSurface] {
+		%b_2 = 5.9
+		%MAC = 1.45
+		%TaperRatio = 0.57
+		%MidChordSweep = -4.6
+		%maxdeflect = 20
+		%ctrlSurfFrac = 1
+		%transformName = 1
+		%massOverride = 0
+	}
+}
+
 @PART[SHUTTLE_Tail_Control|ShuttleTailControl]:AFTER[FerramAerospaceResearch]
 {
 	@MODULE[GeometryPartModule]
