fixed ferram transform for rudder panel

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -215,8 +215,10 @@
 		%MAC = 1.45
 		%TaperRatio = 0.57
 		%MidChordSweep = -4.6
+		%nonSideAttach = 1
 		%maxdeflect = 20
 		%ctrlSurfFrac = 1
+		%transformName = panel
 		%massOverride = 0
 	}
 }
