--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -211,12 +211,17 @@
 	
 	!MODULE[ModuleControlSurface]{}
 	%MODULE[FARControllableSurface] {
-		%b_2 = 5.9
-		%MAC = 1.45
-		%TaperRatio = 0.57
-		%MidChordSweep = -4.6
+		%b_2 = 6.095
+		%MAC = 1.695
+		%TaperRatio = 0.947
+		%MidChordSweep = 8.308
 		%nonSideAttach = 1
+		%pitchaxis = 0
+		%yawaxis = 100
+		%rollaxis = 40
 		%maxdeflect = 20
+		%isSpoiler = True
+		%maxdeflectFlap = -44
 		%ctrlSurfFrac = 1
 		%transformName = panel
 		%massOverride = 0
