--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -34,6 +34,7 @@
 	%rescaleFactor = 1.5625
 	%CoMOffset = 0,0.6,0
 	@mass = 11.556
+	%fuelCrossFeed = true
 	
 	@maxTemp = 773
 	%skinMaxTemp = 2000
@@ -101,12 +102,6 @@
 	}
 	
 	!RESOURCE[MonoPropellant]{}
-	
-	@MODULE[ModuleToggleCrossfeed]
-	{
-		%crossfeedStatus = true
-	}
-	
 	
 	// https://www.bernd-leitenberger.de/space-shuttle.shtml
 	// three nickel-cadmium batteries with 10 amperehours each at 28 volts, so in total 3024 kJ
@@ -178,6 +173,7 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 18.806
+	%fuelCrossFeed = true
 	
 	%CoMOffset = 0,3.3,0
 	%CoLOffset = 0,-1.2,3.0
@@ -212,11 +208,6 @@
 			amount = 930.7
 			maxAmount = 930.7
 		}
-	}
-	
-	@MODULE[ModuleToggleCrossfeed]
-	{
-		%crossfeedStatus = true
 	}
 	
 	!MODULE[ModuleLight],* {}
@@ -254,6 +245,7 @@
 	%RSSROConfig = true
 	
 	@mass = 10.7
+	%fuelCrossFeed = true
 	
 	@maxTemp = 773
 	%skinMaxTemp = 2000
@@ -426,11 +418,6 @@
 			amount = 564.9
 			maxAmount = 564.9
 		}
-	}
-	
-	@MODULE[ModuleToggleCrossfeed]
-	{
-		%crossfeedStatus = true
 	}
 	
 	MODULE
