--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
@@ -23,7 +23,7 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	@mass = 2.79
-	%fuelCrossFeed = false
+	%fuelCrossFeed = true
 	
 	!RESOURCE[MonoPropellant]{}
 	
@@ -97,11 +97,6 @@
 	{
 		%engineID = primary
 		@thrusterPower = 3.87
-	}
-	
-	@MODULE[ModuleToggleCrossfeed]
-	{
-		%crossfeedStatus = true
 	}
 }
 
