added empty internal cockpit variant

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -8,7 +8,7 @@
 	@name = Space_Shuttle_Crew_Analog
 }
 
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]:FOR[RealismOverhaul]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]
 {
 	@MODULE[ModuleRCS*],* 
 	{
@@ -27,7 +27,7 @@
 // Vernier RCS thrust : 0.11 kN (24 lbf)
 
 
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]:FOR[RealismOverhaul]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]
 {
 	%RSSROConfig = true
 	
@@ -147,7 +147,7 @@
 }
 
 //Cockpit internal configuration
-@INTERNAL[css_cockpit|css_cockpitOld]:FOR[RealismOverhaul]
+@INTERNAL[css_cockpit|css_cockpitOld|css_cockpitEmpty]:FOR[RealismOverhaul]
 {
 	%scaleAll = 1.5625, 1.5625, 1.5625
 	
