--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/LifeSupport.cfg
@@ -39,7 +39,7 @@
     }
 }
 
-@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[Space_Shuttle_Crew|Space_Shuttle_Crew_Analog|ShuttleCabin|ShuttleCabinOld|ShuttleCabinEmpty]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@MODULE[ModuleFuelTanks]
 	{
