--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleEngineOMS.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleEngineOMS.cfg
@@ -162,5 +162,12 @@ MODULE
 		falloff = 2
 		thrustTransformName = thrustTransform
 	}
+	
+MODULE
+	{
+		name = ModuleResourceDrain
+		fullResourceDrainTime = 100
+		drainUnloaded = true
+	}
 
 }
