--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -68,7 +68,10 @@
 		%TaperRatio = 0.52
 		%MidChordSweep = 5.37
 		%nonSideAttach = 1
-		%maxdeflect = 20
+		%maxdeflect = 15
+		%pitchaxis = 100
+		%yawaxis = 0
+		%rollaxis = 100
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%rootMidChordOffsetFromOrig = 0, 0, 0
@@ -174,6 +177,9 @@
 		%MidChordSweep = -4.6
 		%nonSideAttach = 1
 		%maxdeflect = 20
+		%pitchaxis = 0
+		%yawaxis = 100
+		%rollaxis = -40
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%massOverride = 0
@@ -212,7 +218,10 @@
 		%TaperRatio = 1
 		%MidChordSweep = 0
 		%nonSideAttach = 1
-		%maxdeflect = 20
+		%maxdeflect = 0
+		%pitchaxis = 0
+		%yawaxis = 0
+		%rollaxis = 0
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%massOverride = 0
