--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/WingSurfaces.cfg
@@ -72,6 +72,10 @@
 		%pitchaxis = 100
 		%yawaxis = 0
 		%rollaxis = 100
+		isFlap = True
+		isSpoiler = False
+		flapDeflectionLevel = 0
+		maxdeflectFlap = 15
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%rootMidChordOffsetFromOrig = 0, 0, 0
@@ -222,6 +226,10 @@
 		%pitchaxis = 0
 		%yawaxis = 0
 		%rollaxis = 0
+		isFlap = True
+		isSpoiler = False
+		flapDeflectionLevel = 0
+		maxdeflectFlap = 15
 		%ctrlSurfFrac = 1
 		%transformName = 1
 		%massOverride = 0
