adjusted wheel braking

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -57,10 +57,7 @@
 		%showControls = false
 	}
 	
-	@MODULE[KSPWheelBrakes]
-	{
-		@maxBrakeTorque = 40
-	}
+	!MODULE[KSPWheelBrakes]
 	
 	!MODULE[ModuleLiftingSurface]{}
 	
