oms fuel dump module fixed

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Engines.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Engines.cfg
@@ -68,4 +68,11 @@
 	{
 		@responseSpeed = 0.001
 	}
+	
+	@MODULE[ModuleResourceDrain]
+	{
+		%drainRate = 0.005
+		%resourceName = MMH, MON3, Helium
+
+	}
 }
