tail normal maps

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -415,6 +415,12 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
+				isNormalMap = true
+				transform = TAIL_1
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/chute
 				transform = cord
 			}
@@ -427,6 +433,12 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
+				isNormalMap = true
+				transform = TAIL_1
 			}
 			TEXTURE
 			{
@@ -443,6 +455,12 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
+				isNormalMap = true
+				transform = TAIL_1
 			}
 			TEXTURE
 			{
