fixed tail nrm texture mapping

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -417,7 +417,7 @@
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsNew_NRM
 				isNormalMap = true
-				transform = TAIL_1
+				transform = Tail_NO_Chute
 			}
 			TEXTURE
 			{
@@ -438,7 +438,7 @@
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsChallenger_NRM
 				isNormalMap = true
-				transform = TAIL_1
+				transform = Tail_NO_Chute
 			}
 			TEXTURE
 			{
@@ -460,7 +460,7 @@
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Wings/EmptyWingsColumbia_NRM
 				isNormalMap = true
-				transform = TAIL_1
+				transform = Tail_NO_Chute
 			}
 			TEXTURE
 			{
