--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
@@ -22,3 +22,80 @@
         glow = ro-hydrolox-blue
     }
 }
+
+
+@PART[ShuttleRocketBooster]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{	
+
+    MODULE
+	{
+		name = ModuleWaterfallFX
+		moduleID = shuttle-rsrm
+		
+		CONTROLLER
+		{
+			name = atmosphereDepth
+			linkedTo = atmosphere_density
+		}
+		CONTROLLER
+		{
+			name = Thrust
+			linkedTo = thrust
+		}
+		CONTROLLER
+		{
+			name = Random2
+			linkedTo = random
+			noiseType = perlin
+			scale = 0.5
+			minimum = -0.5
+			speed = 10
+			seed = 40
+		}
+	  
+	  
+	  
+		TEMPLATE
+		{
+			templateName = rowaterfall-rsrm
+			audio = srm-3
+			position = 0,0,1.8
+			rotation = 0, 0, 0
+			scale = 2.1, 2.1, 6
+		}
+	  
+	}
+	
+	@MODULE[ModuleEngines*]
+    {
+        %powerEffectName = Solid-Lower
+        !runningEffectName = NULL
+        !fxOffset = NULL
+    }
+}
+
+
+@PART[ShuttleRocketBooster]:BEFORE[RealPlume]
+{	
+	@PLUME
+	{
+		@name = Solid-Smoke
+		@smokePosition = 0.0, 0.0, 2.5
+		@fixedScale = 2.2
+        @speed = 5
+	}
+	
+	@MODULE[ModuleEngines*]
+    {
+        @powerEffectName = Solid-Smoke
+    }
+
+    @MODULE[ModuleEngineConfigs]
+    {
+        @CONFIG,*
+        {
+            %powerEffectName = Solid-Smoke
+        }
+    }
+	
+}
