fixes to rsrm waterfall

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/rowaterfall-rsrm.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/rowaterfall-rsrm.cfg
@@ -10,7 +10,7 @@ EFFECTTEMPLATE
 			path = Waterfall/FX/fx-cylinder
 			positionOffset = 0,0,0
 			rotationOffset = -90,0,0
-			scaleOffset = 1,33,1
+			scaleOffset = 1,25,1
 			MATERIAL
 			{
 				transform = Cylinder
@@ -196,7 +196,7 @@ EFFECTTEMPLATE
 		FLOATMODIFIER
 		{
 			name = expandLinA
-			controllerName = atmosphereDepth
+			controllerName = Thrust
 			transformName = Cylinder
 			combinationType = REPLACE
 			useRandomness = False
@@ -205,14 +205,14 @@ EFFECTTEMPLATE
 			floatName = _ExpandLinear
 			floatCurve
 			{
-				key = 0 31 0 0
+				key = 0 25 0 0
 				key = 1 11 0 0
 			}
 		}
 		FLOATMODIFIER
 		{
 			name = expandSqA
-			controllerName = atmosphereDepth
+			controllerName = Thrust
 			transformName = Cylinder
 			combinationType = REPLACE
 			useRandomness = False
@@ -283,7 +283,7 @@ EFFECTTEMPLATE
 			path = Waterfall/FX/fx-cylinder
 			positionOffset = 0,0,0.100000001
 			rotationOffset = -90,0,0
-			scaleOffset = 0.949999988,32,0.949999988
+			scaleOffset = 0.949999988,25,0.949999988
 			MATERIAL
 			{
 				transform = Cylinder
@@ -407,7 +407,7 @@ EFFECTTEMPLATE
 		FLOATMODIFIER
 		{
 			name = falloffA
-			controllerName = atmosphereDepth
+			controllerName = Thrust
 			transformName = Cylinder
 			combinationType = REPLACE
 			useRandomness = False
@@ -416,7 +416,7 @@ EFFECTTEMPLATE
 			floatName = _Falloff
 			floatCurve
 			{
-				key = 0 8 0 0
+				key = 0 12 0 0
 				key = 1 5 0 0
 			}
 		}
@@ -433,7 +433,7 @@ EFFECTTEMPLATE
 			floatCurve
 			{
 				key = 0 25 0 0
-				key = 1 -2 0 0
+				key = 1 2 0 0
 			}
 		}
 		FLOATMODIFIER
@@ -448,7 +448,7 @@ EFFECTTEMPLATE
 			floatName = _ExpandBounded
 			floatCurve
 			{
-				key = 0 10 0 0
+				key = 0 2 0 0
 				key = 1 1.82 0 0
 			}
 		}
@@ -510,7 +510,7 @@ EFFECTTEMPLATE
 			path = Waterfall/FX/fx-cylinder
 			positionOffset = 0,0,0
 			rotationOffset = -90,0,0
-			scaleOffset = 1,41,1
+			scaleOffset = 1,30,1
 			MATERIAL
 			{
 				transform = Cylinder
@@ -642,14 +642,14 @@ EFFECTTEMPLATE
 			floatName = _ExpandBounded
 			floatCurve
 			{
-				key = 0 11 0 0
+				key = 0 7 0 0
 				key = 1 0.77 0 0
 			}
 		}
 		FLOATMODIFIER
 		{
 			name = aFade
-			controllerName = atmosphereDepth
+			controllerName = Thrust
 			transformName = Cylinder
 			combinationType = REPLACE
 			useRandomness = False
@@ -900,7 +900,7 @@ EFFECTTEMPLATE
 			path = Waterfall/FX/fx-volumetric-simple
 			positionOffset = 0,0,0.0299999993
 			rotationOffset = -90,0,0
-			scaleOffset = 1,36,1
+			scaleOffset = 1,40,1
 			MATERIAL
 			{
 				transform = Waterfall/FX/fx-volumetric-simple(Clone)
@@ -986,12 +986,12 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _ExpandLinear
-					value = 8.49444485
+					value = -2.61890054
 				}
 				FLOAT
 				{
 					floatName = _FalloffStart
-					value = 0.566221297
+					value = 0.249444529
 				}
 				FLOAT
 				{
@@ -1006,7 +1006,7 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _ExpandSquare
-					value = 3.33666134
+					value = 0.0944494531
 				}
 				FLOAT
 				{
@@ -1016,7 +1016,7 @@ EFFECTTEMPLATE
 				FLOAT
 				{
 					floatName = _FadeOut
-					value = 0
+					value = 0.512167037
 				}
 			}
 		}
