custom waterfall configs for ssme and oms too

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
@@ -2,7 +2,7 @@
 {
     ROWaterfall
     {
-        template = waterfall-hypergolic-white-upper-1
+        template = waterfall-sss-oms	//waterfall-hypergolic-white-upper-1
         audio = pressure-fed-1
         position = 0,0,-0.025
         rotation = 0, 0, 0
@@ -14,7 +14,7 @@
 {
     ROWaterfall
     {
-        template = rowaterfall-hydrolox-ssme
+        template = waterfall-sss-ssme
         audio = pump-fed-medium-1
         position = 0,0,0
         rotation = 0, 0, 0
@@ -57,7 +57,7 @@
 	  
 		TEMPLATE
 		{
-			templateName = rowaterfall-rsrm
+			templateName = waterfall-sss-rsrm
 			audio = srm-3
 			position = 0,0,1.8
 			rotation = 0, 0, 0
@@ -82,7 +82,7 @@
 		@name = Solid-Smoke
 		@smokePosition = 0.0, 0.0, 2.5
 		@fixedScale = 2.2
-        @speed = 5
+        @speed = 4
 	}
 	
 	@MODULE[ModuleEngines*]
