--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
@@ -12,52 +12,13 @@
 }
 @PART[SSME_CENTER|ShuttleSSME]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
-    //ROWaterfall
-    //{
-    //    template = waterfall-sss-ssme
-    //    audio = pump-fed-medium-1
-    //    position = 0,0,0
-    //    rotation = 0, 0, 0
-    //    scale = 1.512, 1.52, 1.52
-    //    glow = ro-hydrolox-blue
-    //}
-	
-	
-	MODULE
+	ROWaterfall
 	{
-		name = ModuleWaterfallFX
-		moduleID = ShuttleSSME
-		ATMOSPHEREDENSITYCONTROLLER
-		{
-			name = atmosphereDepth
-		}
-		THRUSTCONTROLLER
-		{
-			name = throttle
-			engineID = basicEngine
-		}
-		RANDOMNESSCONTROLLER
-		{
-			name = random
-			noiseType = random
-			range = 0,1
-		}
-		TEMPLATE
-		{
-			templateName = waterfall-sss-ssme
-			overrideParentTransform = thrustTransform
-			scale = 1.51199996,1.51999998,1.51999998
-			rotation = 0,0,0
-			position = 0,0,0
-		}
-		TEMPLATE
-		{
-			templateName = rowaterfall-glow-hydrolox-blue
-			overrideParentTransform = thrustTransform
-			scale = 1.95000005,1.95000005,3.5
-			rotation = 0,0,0
-			position = 0,0,0.0199999996
-		}
+		template = waterfall-sss-ssme
+		audio = pump-fed-medium-1
+		position = 0,0,0
+		rotation = 0, 0, 0
+		scale = 1.512, 1.52, 1.52
 	}
 
 }
@@ -91,8 +52,6 @@
 			speed = 10
 			seed = 40
 		}
-	  
-	  
 	  
 		TEMPLATE
 		{
