--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
@@ -1948,4 +1948,137 @@ EFFECTTEMPLATE
 			}
 		}
 	}
+	EFFECT
+	{
+		name = nozzleGlow
+		parentName = thrustTransform
+		MODEL
+		{
+			path = Waterfall/FX/fx-volumetric-cones
+			positionOffset = 0,0,-0.349999994
+			rotationOffset = -90,0,0
+			scaleOffset = 0.419999987,0.400000006,0.419999987
+			MATERIAL
+			{
+				transform = Waterfall/FX/fx-volumetric-cones(Clone)
+				shader = Waterfall/Additive Cones (Volumetric)
+				randomizeSeed = True
+				FLOAT
+				{
+					floatName = _FadeIn
+					value = 0
+				}
+				COLOR
+				{
+					colorName = _StartTint
+					colorValue = 0.933333337,0.874509811,0.639215708,1
+				}
+				COLOR
+				{
+					colorName = _EndTint
+					colorValue = 0.97647059,0.952941179,0.886274517,1
+				}
+				TEXTURE
+				{
+					textureSlotName = _MainTex
+					texturePath = Waterfall/FX/fx-noise-1
+					textureScale = 1,1
+					textureOffset = 0,0
+				}
+				FLOAT
+				{
+					floatName = _TintFalloff
+					value = 0.540000021
+				}
+				FLOAT
+				{
+					floatName = _TintFresnel
+					value = 0.699999988
+				}
+				FLOAT
+				{
+					floatName = _Falloff
+					value = 0.25
+				}
+				FLOAT
+				{
+					floatName = _Brightness
+					value = 4.30000019
+				}
+				FLOAT
+				{
+					floatName = _FadeOut
+					value = 0.0240000002
+				}
+				FLOAT
+				{
+					floatName = _ConeExpansion
+					value = 0.985831797
+				}
+				FLOAT
+				{
+					floatName = _ConeFade
+					value = 0
+				}
+				FLOAT
+				{
+					floatName = _ConeFadeStart
+					value = 0
+				}
+				FLOAT
+				{
+					floatName = _Smoothness
+					value = 0
+				}
+				FLOAT
+				{
+					floatName = _Asymmetry
+					value = -0.0272999573
+				}
+				FLOAT
+				{
+					floatName = _ExitStart
+					value = 0
+				}
+				FLOAT
+				{
+					floatName = _ExitLength
+					value = 1.48027706
+				}
+				FLOAT
+				{
+					floatName = _ConeLength
+					value = 1.6471101
+				}
+				FLOAT
+				{
+					floatName = _Stretch
+					value = -1
+				}
+				FLOAT
+				{
+					floatName = _TileX
+					value = 0
+				}
+			}
+		}
+		FLOATMODIFIER
+		{
+			name = nozzleConeGlow
+			controllerName = Thrust
+			transformName = Waterfall/FX/fx-volumetric-cones(Clone)
+			combinationType = REPLACE
+			useRandomness = False
+			randomnessController = RandomnessController
+			randomnessScale = 1
+			floatName = _Brightness
+			floatCurve
+			{
+				key = 0 0 0 0
+				key = 0.05 0.5 0 0
+				key = 0.3 1 0 0
+				key = 1 3 0 0
+			}
+		}
+	}
 }
