--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-ssme.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-ssme.cfg
@@ -4842,4 +4842,85 @@ EFFECTTEMPLATE
 			}
 		}
 	}
+	EFFECT
+	{
+		name = NozzleGlow
+		parentName = thrustTransform
+		MODEL
+		{
+			path = Waterfall/FX/fx-cylinder
+			positionOffset = 0,0,-0.980000019
+			rotationOffset = -90,0,0
+			scaleOffset = 0.769999981,1,0.769999981
+			MATERIAL
+			{
+				transform = Cylinder
+				shader = Waterfall/Additive (Dynamic)
+				randomizeSeed = True
+				COLOR
+				{
+					colorName = _StartTint
+					colorValue = 0.450980395,0.545098066,0.945098042,1
+				}
+				COLOR
+				{
+					colorName = _EndTint
+					colorValue = 0.800000012,0.827450991,0.949019611,1
+				}
+				FLOAT
+				{
+					floatName = _TintFalloff
+					value = 0.589999974
+				}
+				FLOAT
+				{
+					floatName = _Falloff
+					value = 0.699999988
+				}
+				FLOAT
+				{
+					floatName = _Fresnel
+					value = 0.252000004
+				}
+				FLOAT
+				{
+					floatName = _Brightness
+					value = 1.36499786
+				}
+				FLOAT
+				{
+					floatName = _FadeOut
+					value = 0.0240000002
+				}
+				FLOAT
+				{
+					floatName = _ExpandOffset
+					value = -1
+				}
+				FLOAT
+				{
+					floatName = _ExpandLinear
+					value = 1
+				}
+			}
+		}
+		FLOATMODIFIER
+		{
+			name = glow
+			controllerName = throttle
+			transformName = Cylinder
+			combinationType = REPLACE
+			useRandomness = False
+			randomnessController = RandomnessController
+			randomnessScale = 1
+			floatName = _Brightness
+			floatCurve
+			{
+				key = 0 0 0 0
+				key = 0.01 0.5 0 0
+				key = 0.1 1.5 0 0
+				key = 1 2.5 0 0
+			}
+		}
+	}
 }
