new better SRB waterfall configs

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/EnginesWaterfall.cfg
@@ -24,7 +24,7 @@
 }
 
 
-@PART[ShuttleRocketBooster]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ShuttleRocketBooster]:AFTER[ROWaterfall]:NEEDS[Waterfall]
 {	
 
     MODULE
