adjusted srb plume light

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
@@ -1781,13 +1781,13 @@ EFFECTTEMPLATE
 		MODEL
 		{
 			path = Waterfall/FX/fx-point-light
-			positionOffset = 0,0,20
+			positionOffset = 0,0,12
 			rotationOffset = 0,0,0
 			scaleOffset = 1,1,1
 			LIGHT
 			{
-				intensity = 6.04581928
-				range = 5000
+				intensity = 5
+				range = 1500
 				color = 0.992156863,0.921568632,0.690196097,1
 				lightType = Point
 				angle = 0
@@ -1819,13 +1819,13 @@ EFFECTTEMPLATE
 		MODEL
 		{
 			path = Waterfall/FX/fx-point-light
-			positionOffset = 0,0,6
+			positionOffset = 0,0,1
 			rotationOffset = 0,0,0
 			scaleOffset = 1,1,1
 			LIGHT
 			{
-				intensity = 0.916598141
-				range = 85.1824493
+				intensity = 2.08422565
+				range = 500
 				color = 0.992156863,0.921568632,0.690196097,1
 				lightType = Point
 				angle = 0
@@ -1847,44 +1847,6 @@ EFFECTTEMPLATE
 			{
 				key = 0 0 0 0
 				key = 1 0.91 0 0
-			}
-		}
-	}
-	EFFECT
-	{
-		name = closeLight
-		parentName = thrustTransform
-		MODEL
-		{
-			path = Waterfall/FX/fx-point-light
-			positionOffset = 0,0,1
-			rotationOffset = 0,0,0
-			scaleOffset = 1,1,1
-			LIGHT
-			{
-				intensity = 1.95912278
-				range = 16.7928391
-				color = 0.992156863,0.921568632,0.690196097,1
-				lightType = Point
-				angle = 0
-				transform = Light
-				baseTransform = 
-			}
-		}
-		LIGHTFLOATMODIFIER
-		{
-			floatName = Intensity
-			controllerName = Thrust
-			transformName = Light
-			useRandomness = False
-			randomnessController = RandomnessController
-			randomnessScale = 1
-			name = bright
-			combinationType = REPLACE
-			floatCurve
-			{
-				key = 0 0 0 0
-				key = 1 1.95 0 0
 			}
 		}
 	}
