preliminary ferram config

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Orbiter.cfg
@@ -19,6 +19,17 @@
 	%skinSkinConductionMult = 0.1
 	%emissiveConstant = 0.95		//matte black
 	
+	!MODULE[ModuleLiftingSurface]{}
+	%MODULE[FARWingAerodynamicModel]
+	{
+		%MAC = 15.47
+		%MidChordSweep = 45
+		%b_2 = 23.79
+		%TaperRatio = 0.185
+		%rootMidChordOffsetFromOrig = 9.175, -0.5, 0
+		%massOverride = 0
+	}
+	
 	
 	@MODULE[ModuleCommand]
 	{
@@ -43,8 +54,6 @@
 	}
 	
 	!MODULE[KSPWheelBrakes]
-	
-	!MODULE[ModuleLiftingSurface]{}
 	
 	@MODULE[ModuleRCS*],*
 	{
